xd5qj/src/pp2/y.output
Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | FnDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VarDecl: Variable ';'

    9 Variable: Type T_Identifier

   10 Type: T_Int
   11     | T_Bool
   12     | T_String
   13     | T_Double
   14     | T_Identifier
   15     | Type T_Dims

   16 FnDecl: FnHeader StmtBlock

   17 FnHeader: Type T_Identifier '(' Formals ')'
   18         | T_Void T_Identifier '(' Formals ')'

   19 Formals: FormalList
   20        | /* empty */

   21 FormalList: FormalList ',' Variable
   22           | Variable

   23 StmtBlock: '{' OneOrMoreVar '}'
   24          | '{' OneOrMoreVar OneOrMoreStmt '}'
   25          | '{' OneOrMoreStmt '}'
   26          | '{' '}'

   27 OneOrMoreVar: OneOrMoreVar VarDecl
   28             | VarDecl

   29 OneOrMoreStmt: OneOrMoreStmt Stmt
   30              | Stmt

   31 ClassDecl: T_Class T_Identifier Extends Implements '{' Fields '}'

   32 Extends: T_Extends T_Identifier
   33        | /* empty */

   34 Implements: T_Implements IdentifierList
   35           | /* empty */

   36 IdentifierList: T_Identifier
   37               | IdentifierList ',' T_Identifier

   38 Fields: Fields Field
   39       | /* empty */

   40 Field: VarDecl
   41      | FnDecl

   42 InterfaceDecl: T_Interface T_Identifier '{' Prototypes '}'

   43 Prototypes: Prototypes Prototype
   44           | /* empty */

   45 Prototype: FnHeader ';'

   46 Stmt: ';'
   47     | Expr ';'
   48     | IfStmt
   49     | WhileStmt
   50     | ForStmt
   51     | BreakStmt
   52     | ReturnStmt
   53     | PrintStmt
   54     | StmtBlock
   55     | SwitchStmt

   56 WhileStmt: T_While '(' Expr ')' Stmt

   57 ForStmt: T_For '(' OptionalExpr ';' Expr ';' OptionalExpr ')' Stmt

   58 IfStmt: T_If '(' Expr ')' Stmt
   59       | T_If '(' Expr ')' Stmt T_Else Stmt

   60 ReturnStmt: T_Return OptionalExpr ';'

   61 BreakStmt: T_Break ';'

   62 PrintStmt: T_Print '(' ExprList ')' ';'

   63 SwitchStmt: T_Switch '(' Expr ')' CaseBlock

   64 CaseBlock: '{' Cases Default '}'
   65          | '{' Cases '}'

   66 Cases: Cases Case
   67      | Case

   68 Case: T_Case T_IntConstant ':' StmtList

   69 Default: T_Default ':' StmtList

   70 StmtList: OneOrMoreStmt
   71         | /* empty */

   72 ExprList: Expr
   73         | ExprList ',' Expr

   74 OptionalExpr: Expr
   75             | /* empty */

   76 Expr: LValueWithPostfix '=' Expr
   77     | Constant
   78     | LValueWithPostfix
   79     | T_This
   80     | Call
   81     | '(' Expr ')'
   82     | Expr '+' Expr
   83     | Expr '-' Expr
   84     | Expr '*' Expr
   85     | Expr '/' Expr
   86     | Expr '%' Expr
   87     | '-' Expr
   88     | Expr '<' Expr
   89     | Expr T_LessEqual Expr
   90     | Expr '>' Expr
   91     | Expr T_GreaterEqual Expr
   92     | Expr T_Equal Expr
   93     | Expr T_NotEqual Expr
   94     | Expr T_And Expr
   95     | Expr T_Or Expr
   96     | '!' Expr
   97     | T_ReadInteger '(' ')'
   98     | T_ReadLine '(' ')'
   99     | T_New '(' T_Identifier ')'
  100     | T_NewArray '(' Expr ',' Type ')'
  101     | Expr T_Increment
  102     | Expr T_Decrement

  103 LValueWithPostfix: LValue T_Increment
  104                  | LValue T_Decrement
  105                  | LValue

  106 LValue: T_Identifier
  107       | Expr '.' T_Identifier
  108       | Expr '[' Expr ']'

  109 Call: T_Identifier '(' Actuals ')'
  110     | Expr '.' T_Identifier '(' Actuals ')'

  111 Actuals: ExprList
  112        | /* empty */

  113 Constant: T_IntConstant
  114         | T_DoubleConstant
  115         | T_BoolConstant
  116         | T_StringConstant
  117         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 96
'%' (37) 86
'(' (40) 17 18 56 57 58 59 62 63 81 97 98 99 100 109 110
')' (41) 17 18 56 57 58 59 62 63 81 97 98 99 100 109 110
'*' (42) 84
'+' (43) 82
',' (44) 21 37 73 100
'-' (45) 83 87
'.' (46) 107 110
'/' (47) 85
':' (58) 68 69
';' (59) 8 45 46 47 57 60 61 62
'<' (60) 88
'=' (61) 76
'>' (62) 90
'[' (91) 108
']' (93) 108
'{' (123) 23 24 25 26 31 42 64 65
'}' (125) 23 24 25 26 31 42 64 65
error (256)
T_Void (258) 18
T_Bool (259) 11
T_Int (260) 10
T_Double (261) 13
T_String (262) 12
T_Class (263) 31
T_Null (264) 117
T_Extends (265) 32
T_This (266) 79
T_Interface (267) 42
T_Implements (268) 34
T_While (269) 56
T_For (270) 57
T_If (271) 58 59
T_Return (272) 60
T_Break (273) 61
T_NewArray (274) 100
T_Print (275) 62
T_ReadInteger (276) 97
T_ReadLine (277) 98
T_Switch (278) 63
T_Case (279) 68
T_Default (280) 69
T_Identifier (281) 9 14 17 18 31 32 36 37 42 99 106 107 109 110
T_StringConstant (282) 116
T_IntConstant (283) 68 113
T_DoubleConstant (284) 114
T_BoolConstant (285) 115
T_Else (286) 59
T_Then (287)
T_Assignment (288)
T_Or (289) 95
T_And (290) 94
T_NotEqual (291) 93
T_Equal (292) 92
T_GreaterEqual (293) 91
T_LessEqual (294) 89
T_Unary (295)
T_New (296) 99
T_LValue (297)
T_Decrement (298) 102 104
T_Increment (299) 101 103
T_Call (300)
T_Dims (301) 15


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
Program (67)
    on left: 1, on right: 0
DeclList (68)
    on left: 2 3, on right: 1 2
Decl (69)
    on left: 4 5 6 7, on right: 2 3
VarDecl (70)
    on left: 8, on right: 4 27 28 40
Variable (71)
    on left: 9, on right: 8 21 22
Type (72)
    on left: 10 11 12 13 14 15, on right: 9 15 17 100
FnDecl (73)
    on left: 16, on right: 5 41
FnHeader (74)
    on left: 17 18, on right: 16 45
Formals (75)
    on left: 19 20, on right: 17 18
FormalList (76)
    on left: 21 22, on right: 19 21
StmtBlock (77)
    on left: 23 24 25 26, on right: 16 54
OneOrMoreVar (78)
    on left: 27 28, on right: 23 24 27
OneOrMoreStmt (79)
    on left: 29 30, on right: 24 25 29 70
ClassDecl (80)
    on left: 31, on right: 6
Extends (81)
    on left: 32 33, on right: 31
Implements (82)
    on left: 34 35, on right: 31
IdentifierList (83)
    on left: 36 37, on right: 34 37
Fields (84)
    on left: 38 39, on right: 31 38
Field (85)
    on left: 40 41, on right: 38
InterfaceDecl (86)
    on left: 42, on right: 7
Prototypes (87)
    on left: 43 44, on right: 42 43
Prototype (88)
    on left: 45, on right: 43
Stmt (89)
    on left: 46 47 48 49 50 51 52 53 54 55, on right: 29 30 56 57 58
    59
WhileStmt (90)
    on left: 56, on right: 49
ForStmt (91)
    on left: 57, on right: 50
IfStmt (92)
    on left: 58 59, on right: 48
ReturnStmt (93)
    on left: 60, on right: 52
BreakStmt (94)
    on left: 61, on right: 51
PrintStmt (95)
    on left: 62, on right: 53
SwitchStmt (96)
    on left: 63, on right: 55
CaseBlock (97)
    on left: 64 65, on right: 63
Cases (98)
    on left: 66 67, on right: 64 65 66
Case (99)
    on left: 68, on right: 66 67
Default (100)
    on left: 69, on right: 64
StmtList (101)
    on left: 70 71, on right: 68 69
ExprList (102)
    on left: 72 73, on right: 62 73 111
OptionalExpr (103)
    on left: 74 75, on right: 57 60
Expr (104)
    on left: 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
    94 95 96 97 98 99 100 101 102, on right: 47 56 57 58 59 63 72 73
    74 76 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 100 101 102
    107 108 110
LValueWithPostfix (105)
    on left: 103 104 105, on right: 76 78
LValue (106)
    on left: 106 107 108, on right: 103 104 105
Call (107)
    on left: 109 110, on right: 80
Actuals (108)
    on left: 111 112, on right: 109 110
Constant (109)
    on left: 113 114 115 116 117, on right: 77


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    FnHeader       go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


state 1

   18 FnHeader: T_Void . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 19


state 2

   11 Type: T_Bool .

    $default  reduce using rule 11 (Type)


state 3

   10 Type: T_Int .

    $default  reduce using rule 10 (Type)


state 4

   13 Type: T_Double .

    $default  reduce using rule 13 (Type)


state 5

   12 Type: T_String .

    $default  reduce using rule 12 (Type)


state 6

   31 ClassDecl: T_Class . T_Identifier Extends Implements '{' Fields '}'

    T_Identifier  shift, and go to state 20


state 7

   42 InterfaceDecl: T_Interface . T_Identifier '{' Prototypes '}'

    T_Identifier  shift, and go to state 21


state 8

   14 Type: T_Identifier .

    $default  reduce using rule 14 (Type)


state 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


state 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 23
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    FnHeader       go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


state 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 12

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


state 13

    8 VarDecl: Variable . ';'

    ';'  shift, and go to state 24


state 14

    9 Variable: Type . T_Identifier
   15 Type: Type . T_Dims
   17 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 25
    T_Dims        shift, and go to state 26


state 15

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


state 16

   16 FnDecl: FnHeader . StmtBlock

    '{'  shift, and go to state 27

    StmtBlock  go to state 28


state 17

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


state 18

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


state 19

   18 FnHeader: T_Void T_Identifier . '(' Formals ')'

    '('  shift, and go to state 29


state 20

   31 ClassDecl: T_Class T_Identifier . Extends Implements '{' Fields '}'

    T_Extends  shift, and go to state 30

    $default  reduce using rule 33 (Extends)

    Extends  go to state 31


state 21

   42 InterfaceDecl: T_Interface T_Identifier . '{' Prototypes '}'

    '{'  shift, and go to state 32


state 22

    0 $accept: Program $end .

    $default  accept


state 23

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 24

    8 VarDecl: Variable ';' .

    $default  reduce using rule 8 (VarDecl)


state 25

    9 Variable: Type T_Identifier .
   17 FnHeader: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 33

    $default  reduce using rule 9 (Variable)


state 26

   15 Type: Type T_Dims .

    $default  reduce using rule 15 (Type)


state 27

   23 StmtBlock: '{' . OneOrMoreVar '}'
   24          | '{' . OneOrMoreVar OneOrMoreStmt '}'
   25          | '{' . OneOrMoreStmt '}'
   26          | '{' . '}'

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 34
    T_This            shift, and go to state 35
    T_While           shift, and go to state 36
    T_For             shift, and go to state 37
    T_If              shift, and go to state 38
    T_Return          shift, and go to state 39
    T_Break           shift, and go to state 40
    T_NewArray        shift, and go to state 41
    T_Print           shift, and go to state 42
    T_ReadInteger     shift, and go to state 43
    T_ReadLine        shift, and go to state 44
    T_Switch          shift, and go to state 45
    T_Identifier      shift, and go to state 46
    T_StringConstant  shift, and go to state 47
    T_IntConstant     shift, and go to state 48
    T_DoubleConstant  shift, and go to state 49
    T_BoolConstant    shift, and go to state 50
    '-'               shift, and go to state 51
    '!'               shift, and go to state 52
    T_New             shift, and go to state 53
    ';'               shift, and go to state 54
    '('               shift, and go to state 55
    '{'               shift, and go to state 27
    '}'               shift, and go to state 56

    VarDecl            go to state 57
    Variable           go to state 13
    Type               go to state 58
    StmtBlock          go to state 59
    OneOrMoreVar       go to state 60
    OneOrMoreStmt      go to state 61
    Stmt               go to state 62
    WhileStmt          go to state 63
    ForStmt            go to state 64
    IfStmt             go to state 65
    ReturnStmt         go to state 66
    BreakStmt          go to state 67
    PrintStmt          go to state 68
    SwitchStmt         go to state 69
    Expr               go to state 70
    LValueWithPostfix  go to state 71
    LValue             go to state 72
    Call               go to state 73
    Constant           go to state 74


state 28

   16 FnDecl: FnHeader StmtBlock .

    $default  reduce using rule 16 (FnDecl)


state 29

   18 FnHeader: T_Void T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 20 (Formals)

    Variable    go to state 75
    Type        go to state 58
    Formals     go to state 76
    FormalList  go to state 77


state 30

   32 Extends: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 78


state 31

   31 ClassDecl: T_Class T_Identifier Extends . Implements '{' Fields '}'

    T_Implements  shift, and go to state 79

    $default  reduce using rule 35 (Implements)

    Implements  go to state 80


state 32

   42 InterfaceDecl: T_Interface T_Identifier '{' . Prototypes '}'

    $default  reduce using rule 44 (Prototypes)

    Prototypes  go to state 81


state 33

   17 FnHeader: Type T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 20 (Formals)

    Variable    go to state 75
    Type        go to state 58
    Formals     go to state 82
    FormalList  go to state 77


state 34

  117 Constant: T_Null .

    $default  reduce using rule 117 (Constant)


state 35

   79 Expr: T_This .

    $default  reduce using rule 79 (Expr)


state 36

   56 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 83


state 37

   57 ForStmt: T_For . '(' OptionalExpr ';' Expr ';' OptionalExpr ')' Stmt

    '('  shift, and go to state 84


state 38

   58 IfStmt: T_If . '(' Expr ')' Stmt
   59       | T_If . '(' Expr ')' Stmt T_Else Stmt

    '('  shift, and go to state 85


state 39

   60 ReturnStmt: T_Return . OptionalExpr ';'

    T_Null            shift, and go to state 34
    T_This            shift, and go to state 35
    T_NewArray        shift, and go to state 41
    T_ReadInteger     shift, and go to state 43
    T_ReadLine        shift, and go to state 44
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 47
    T_IntConstant     shift, and go to state 48
    T_DoubleConstant  shift, and go to state 49
    T_BoolConstant    shift, and go to state 50
    '-'               shift, and go to state 51
    '!'               shift, and go to state 52
    T_New             shift, and go to state 53
    '('               shift, and go to state 55

    $default  reduce using rule 75 (OptionalExpr)

    OptionalExpr       go to state 87
    Expr               go to state 88
    LValueWithPostfix  go to state 71
    LValue             go to state 72
    Call               go to state 73
    Constant           go to state 74


state 40

   61 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 89


state 41

  100 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 90


state 42

   62 PrintStmt: T_Print . '(' ExprList ')' ';'

    '('  shift, and go to state 91


state 43

   97 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 92


state 44

   98 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 93


state 45

   63 SwitchStmt: T_Switch . '(' Expr ')' CaseBlock

    '('  shift, and go to state 94


state 46

   14 Type: T_Identifier .
  106 LValue: T_Identifier .
  109 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 95

    T_Identifier  reduce using rule 14 (Type)
    T_Dims        reduce using rule 14 (Type)
    $default      reduce using rule 106 (LValue)

